# NLP_zut

./: .gitignore  README.md  ollama_tutor_chat.py
NLP_exp/exp1_prompt_engineering/: QA_少样本.md  QA_思维链.md  ai assistant提示词.md  实验提示词.md  评测_少样本.md  评测_零样本.md
exp1_prompt_engineering/: ollama_tutor_chat.py
exp1_prompt_engineering/prompt_engineering/: QA_角色扮演.md  QA_零样本.md  评测_思维链.md  评测_角色扮演.md
exp2_rag_similarity/: rag_similarity_experiment.py
exp2_word_precess_sentence_transformer/: embedding_demo.py
exp2_word_process_nltk/: demo0_base.py  demo1_tokenlize.py  log_cn.txt  log_en.txt  pipeline_cn_demo.py  pipeline_en_demo.py  visualize_pipeline.py
exp3_mL_NLP/: main.py  model.py  predict.py  pyproject.toml  sentiment_analysis.ipynb  train.py
exp_Agent/: Typing.ipynb  agent.py  eiffel_tower_height.txt  harness_agent.md  inspect.ipynb  main.py  plan-and-execute.ipynb  react_and_plan_execute.md  tools.py
