[project]
name = "exp3-ml-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.8.5",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]
